--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "backend_project",
   "version": "1.0.0",
   "description": "a backend project of youtube",
+  "type": "module",
   "keywords": [
     "javaScript",
     "backend"
   ],
   "license": "ISC",
   "author": "Adarsh",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   }
 }
